// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card demo -- card 1`] = `
.c2 {
  line-height: 28px;
  font-weight: bold;
  padding: 0 16px;
  margin-top: 12px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c4 {
  display: block;
  line-height: 22px;
  font-weight: normal;
}

.c5 {
  line-height: 28px;
  padding: 0 16px;
  margin-top: 12px;
}

.c5:before,
.c5:after {
  content: ' ';
  display: table;
}

.c5:after {
  clear: both;
}

.c7 {
  min-height: 30px;
  padding: 0 16px;
  margin-top: 12px;
}

.c9 {
  line-height: 1;
  padding: 0 16px;
  margin-top: 12px;
  padding-top: 12px;
}

.c9:before,
.c9:after {
  content: ' ';
  display: table;
}

.c9:after {
  clear: both;
}

.c0 {
  box-sizing: border-box;
  border-radius: 4px;
  text-align: left;
  padding-bottom: 12px;
  border: 1px solid #e1e6f0;
  background: #fff;
  font-size: 12px;
  color: #6b798e;
}

.c0 .c1 {
  color: #0a1633;
  font-size: 14px;
}

.c0 .c3 {
  color: #c3cad9;
  font-size: 12px;
}

.c0 .c8 {
  border-top: 1px solid #e1e6f0;
}

.c6 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  border-color: #c3cad9;
  background: #fff;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c6:hover {
  color: #4074e1;
  border-color: #4683e6;
  background: #fff;
}

.c6[disabled] {
  border-color: #d9d9d9;
  background: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <div>
      This is the title
    </div>
    <div
      class="c3 c4"
    >
      This is the comment
    </div>
  </div>
  <div
    class="c5"
  >
    <button
      class="c6"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="c6"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="c7"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px;"
    >
      This is the content
    </div>
  </div>
  <div
    class="c8 c9"
  >
    <button
      class="c6"
      style="float:right;"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;

exports[`Card demo -- custom 1`] = `
.c5 {
  line-height: 28px;
  font-weight: bold;
  padding: 0 16px;
  margin-top: 12px;
}

.c5:before,
.c5:after {
  content: ' ';
  display: table;
}

.c5:after {
  clear: both;
}

.c7 {
  display: block;
  line-height: 22px;
  font-weight: normal;
}

.c2 {
  line-height: 28px;
  padding: 0 16px;
  margin-top: 12px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c1 {
  min-height: 30px;
  padding: 0 16px;
  margin-top: 12px;
}

.c9 {
  line-height: 1;
  padding: 0 16px;
  margin-top: 12px;
  padding-top: 12px;
}

.c9:before,
.c9:after {
  content: ' ';
  display: table;
}

.c9:after {
  clear: both;
}

.c0 {
  box-sizing: border-box;
  border-radius: 4px;
  text-align: left;
  padding-bottom: 12px;
  border: 1px solid #e1e6f0;
  background: #fff;
  font-size: 12px;
  color: #6b798e;
}

.c0 .c4 {
  color: #0a1633;
  font-size: 14px;
}

.c0 .c6 {
  color: #c3cad9;
  font-size: 12px;
}

.c0 .c8 {
  border-top: 1px solid #e1e6f0;
}

.c3 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  border-color: #c3cad9;
  background: #fff;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c3:hover {
  color: #4074e1;
  border-color: #4683e6;
  background: #fff;
}

.c3[disabled] {
  border-color: #d9d9d9;
  background: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px;"
    >
      This is the content
    </div>
  </div>
  <div
    class="c2"
  >
    <button
      class="c3"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="c3"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="c4 c5"
  >
    <div>
      This is the title
    </div>
    <div
      class="c6 c7"
    >
      This is the comment
    </div>
  </div>
  <div
    class="c8 c9"
  >
    <button
      class="c3"
      style="float:right;"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;
